# Taller-de-Programaci-n-I

./: README.md
TP - Bitcoin Node/: README.md
TP - Bitcoin Node/app/: Cargo.toml  bitcoin_ui.glade  bitcoin_ui.glade~
TP - Bitcoin Node/app/src/: accounts.rs  bech32.rs  (+9 more)
TP - Bitcoin Node/bitcoin/: Cargo.toml
TP - Bitcoin Node/node/: Cargo.toml
TP - Bitcoin Node/wallet/: Cargo.toml  bitcoin_ui.glade  bitcoin_ui.glade~
TP - Bitcoin Node/wallet/src/: #bitcoin_ui.glade#  accounts.rs  bech32.rs  handlers.rs  interface_error.rs  lib.rs  main.rs  proof_of_inclusion.rs  style.css  transactions.rs  update_wallet.rs  user_info.rs  views.rs
TP - Bitcoin Node/wallet/src/bech32/: bech32.rs  bech32_constants.rs  bech32_errors.rs  bech32mod.rs  witness_program.rs
TP - Bitcoin Node/wallet/src/handlers/: handle_buttons.rs  handle_styles.rs  handle_windows.rs  handler_constants.rs
TP - Bitcoin Node/wallet/src/proof_of_inclusion/: check_proof_error.rs  get_proof_of_inclusion.rs
TP - Bitcoin Node/wallet/src/transactions/: create_transaction_error.rs  create_transactions.rs  create_transactios_constants.rs  transaction_view.rs
TP - Bitcoin Node/wallet/src/views/: transaction_tree_view.rs  transaction_view.rs  views_constants.rs
TP0 - Ajedrez/: Cargo.toml
TP0 - Ajedrez/src/: constantes.rs  coordenada_struct.rs  funciones.rs  lib.rs  main.rs  pieza_struct.rs
TP0 - Ajedrez/tests/: ejemplo10.txt  ejemplo11.txt  ejemplo12.txt  ejemplo13.txt  ejemplo2.txt  ejemplo3.txt  ejemplo4.txt  ejemplo5.txt  ejemplo6.txt  ejemplo7.txt  ejemplo8.txt  ejemplo9.txt  test_integracion.rs
(+120 files in other folders)
