[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node = { path = "../node" }
gtk = { version = "0.9.2", features = ["v3_22"] }
glib = "0.10"
gio = { version = "0.9", features = ["v2_56"] }
gdk = "0.17.1" 
bitcoin_hashes = "0.12.0"
pango = "0.17.10"
bs58 = "0.5.0"
secp256k1 = { version = "0.27.0", features = ["bitcoin-hashes"] }
gdk-pixbuf = "0.17.10"
